--- a/CostomerPrice.html
+++ b/CostomerPrice.html
@@ -82,7 +82,7 @@
           }).join('');
 
         const img = grouped[model][0].Picture?.[0]?.url || 'https://via.placeholder.com/300x180?text=No+Image';
-        const logo = 'https://i.ibb.co/vxyv8vj9/IMG-20250719-210558-removebg-preview.png';
+        const logo = 'IMG_20250719_210558-removebg-preview.png';
         const qr = 'https://api.qrserver.com/v1/create-qr-code/?size=80x80&data=https://yourwebsite.com';
 
         container.innerHTML += `
