--- a/Lead/leadDash.html
+++ b/Lead/leadDash.html
@@ -473,7 +473,7 @@
 
         if (newStatus === "Sales Done") {
           setTimeout(() => {
-            window.location.href = "https://your-sales-form-link.com";
+            window.location.href = "https://workshopbright.netlify.app/Sale/Saleentry.html";
           }, 1500);
         }
       } catch (error) {
