--- a/Sale/dashv5.html
+++ b/Sale/dashv5.html
@@ -17,18 +17,29 @@
         <select id="filterSpec" class="border p-2 rounded w-full">
           <option value="">Filter by Model</option>
           <option value="RIDER">RIDER</option>
-          <option value="RIDER PLUS">RIDER PLUS</option>
           <option value="CUTIE SUPER">CUTIE SUPER</option>
+          <option value="RIDER">RIDER</option>
+          <option value="CUTIE SUPER">CUTIE SUPER</option>
+          <option value="ROYAL">ROYAL</option>
+          <option value="LEGEND R">LEGEND R</option>
+          <option value="LEGEND S">LEGEND S</option>
+          <option value="LEGEND SUPER S">LEGEND SUPER S</option>
+          <option value="BMW">BMW</option>
+          <option value="HANDICAPPED">HANDICAPPED</option>
+          <option value="2W LOADER">2W LOADER</option>
+          <option value="3W LOADER">3W LOADER</option>
         </select>
         <select id="filterSalesman" class="border p-2 rounded w-full">
           <option value="">Filter by Salesman</option>
-          <option value="RANEESH BABU SR">RANEESH BABU SR</option>
-          <option value="ARSAL MT">ARSAL MT</option>
+           <option value="ABINU TP">ABINU TP</option>
+           <option value="RAMSHAD">RAMSHAD</option>
         </select>
         <select id="filterBranch" class="border p-2 rounded w-full">
           <option value="">Filter by Branch</option>
           <option value="ANGADIPPURAM">ANGADIPPURAM</option>
           <option value="MANJERI">MANJERI</option>
+          <option value="UNIVERSITY">UNIVERSITY</option>
+          <option value="NILAMBUR">NILAMBUR</option>
         </select>
       </div>
       <div class="text-center">
