--- a/Sale/Saleentry.html
+++ b/Sale/Saleentry.html
@@ -21,28 +21,37 @@
         <option value="">Select Branch</option>
         <option value="ANGADIPPURAM">ANGADIPPURAM</option>
         <option value="MANJERI">MANJERI</option>
+        <option value="UNIVERSITY">UNIVERSITY</option>
+        <option value="NILAMBUR">NILAMBUR</option>
       </select>
 
       <select id="salesman" class="w-full border p-2 rounded" required>
         <option value="">Select Salesman</option>
-        <option value="RANEESH BABU SR">RANEESH BABU SR</option>
-        <option value="ARSAL MT">ARSAL MT</option>
+        <option value="ABINU TP">ABINU TP</option>
+        <option value="RAMSHAD">RAMSHAD</option>
       </select>
 
       <select id="battery" class="w-full border p-2 rounded" required>
         <option value="">Select Battery</option>
         <option value="GRAPHENE 48V28AH">GRAPHENE 48V28AH </option>
-          <option value="GRAPHENE 60V32AH">GRAPHENE 60V32AH</option>
-  <option value="LITHIUM ION 60V32AH">GRAPHENE 60V32AH</option>
-        <option value="LITHIUM ION 72V32AH">LITHIUM ION 72V32AH</option>
-        <option value="LITHIUM PHOSPHATE 72V32AH">LITHIUM PHOSPHATE 72</option>
+        <option value="GRAPHENE 60V32AH">GRAPHENE 60V32AH</option>
+        <option value="LITHIUM ION 60V32AH">LITHIUM 60V32AH</option>
+        <option value="LITHIUM ION 72V36AH">LITHIUM ION 72V36AH</option>
+        <option value="LITHIUM PHOSPHATE 72V36AH">LITHIUM PHOSPHATE 72V36AH</option>
       </select>
 
       <select id="spec" class="w-full border p-2 rounded" required>
         <option value="">Select Model</option>
         <option value="RIDER">RIDER</option>
-        <option value="RIDER PLUS">RIDER PLUS</option>
         <option value="CUTIE SUPER">CUTIE SUPER</option>
+        <option value="ROYAL">ROYAL</option>
+        <option value="LEGEND R">LEGEND R</option>
+        <option value="LEGEND S">LEGEND S</option>
+        <option value="LEGEND SUPER S">LEGEND SUPER S</option>
+        <option value="BMW">BMW</option>
+        <option value="HANDICAPPED">HANDICAPPED</option>
+        <option value="2W LOADER">2W LOADER</option>
+        <option value="3W LOADER">3W LOADER</option>
       </select>
 
       <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700 transition">Add Sale</button>
