--- a/Sale/dashv5.html
+++ b/Sale/dashv5.html
@@ -33,6 +33,8 @@
           <option value="">Filter by Salesman</option>
            <option value="ABINU TP">ABINU TP</option>
            <option value="RAMSHAD">RAMSHAD</option>
+           <option value="UNIVERSITY">UNIVERSITY</option>
+           <option value="NILAMBUR">NILAMBUR</option>
         </select>
         <select id="filterBranch" class="border p-2 rounded w-full">
           <option value="">Filter by Branch</option>
