--- a/Sale/Saleentry.html
+++ b/Sale/Saleentry.html
@@ -29,6 +29,8 @@
         <option value="">Select Salesman</option>
         <option value="ABINU TP">ABINU TP</option>
         <option value="RAMSHAD">RAMSHAD</option>
+        <option value="UNIVERSITY">UNIVERSITY</option>
+        <option value="NILAMBUR">NILAMBUR</option>
       </select>
 
       <select id="battery" class="w-full border p-2 rounded" required>
