--- a/Lead/Leadform.html
+++ b/Lead/Leadform.html
@@ -50,6 +50,9 @@
         <label class="font-semibold block mb-1">Status</label>
         <select name="status" required class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500">
           <option value="">Select Status</option>
+          <option value="New Lead">New Lead</option>
+          <option value="Followup Pending">Followup Pending</option>
+          <option value="Followup done">Followup Done</option>
           <option value="Interested">Interested</option>
           <option value="Not Interested">Not Interested</option>
           <option value="Sale done">Sale done</option>
