--- a/Lead/LeadPerf.html
+++ b/Lead/LeadPerf.html
@@ -317,6 +317,7 @@
         'Sales Done': 0,
         'Interested': 0,
         'Not Interested': 0,
+        'Followup Done': 0,
         'Followup Pending': 0,
         'New Lead': 0
       };
@@ -340,7 +341,8 @@
             backgroundColor: [
               '#28a745', // Sales Done - green
               '#17a2b8', // Interested - teal
-              '#dc3545', // Not Interested - red
+              '#dc3545',// Not Interested - red
+              '#20c997',// Followup Done - teal
               '#ffc107', // Followup Pending - yellow
               '#6c757d'  // New Lead - gray
             ],
